--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/VickyA371/Node-JS-Learning/issues"
   },
-  "homepage": "https://github.com/VickyA371/Node-JS-Learning#readme"
+  "homepage": "https://github.com/VickyA371/Node-JS-Learning#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
